--- a/res/xml/carrierlabel.xml
+++ b/res/xml/carrierlabel.xml
@@ -28,4 +28,20 @@
         android:key="custom_carrier_label"
         android:title="@string/custom_carrier_label_title" />
 
+        <com.nitrogen.settings.preferences.SystemSettingSeekBarPreference
+            android:key="status_bar_carrier_font_size"
+            android:title="@string/status_bar_carrier_size"
+            android:max="23"
+            settings:min="4"
+            android:defaultValue="14"
+            settings:units="dp" />
+
+        <com.nitrogen.settings.preferences.SystemSettingListPreference
+            android:key="status_bar_carrier_font_style"
+            android:entries="@array/status_bar_weather_font_style_entries"
+            android:dialogTitle="@string/status_bar_carrier_font_style_title"
+            android:entryValues="@array/status_bar_weather_font_style_values"
+            android:title="@string/status_bar_carrier_font_style_title"
+            android:defaultValue="0" />
+
 </PreferenceScreen>
