--- a/res/xml/weather.xml
+++ b/res/xml/weather.xml
@@ -41,4 +41,18 @@
         android:dialogTitle="@string/statusbar_weather_dialog_title"
         android:entries="@array/status_bar_weather_entries"
         android:entryValues="@array/status_bar_weather_values" />
+
+        <com.nitrogen.settings.preferences.SystemSettingListPreference
+            android:key="status_bar_weather_font_style"
+            android:entries="@array/status_bar_weather_font_style_entries"
+            android:entryValues="@array/status_bar_weather_font_style_values"
+            android:title="@string/status_bar_weather_font_style_title" />
+
+        <com.nitrogen.settings.preferences.SystemSettingSeekBarPreference
+            android:key="status_bar_weather_size"
+            android:title="@string/status_bar_weather_size_title"
+            android:max="23"
+            settings:min="4"
+            android:defaultValue="14"
+            settings:units="dp"/>
 </PreferenceScreen>
