--- a/res/values/nitrogen_strings.xml
+++ b/res/values/nitrogen_strings.xml
@@ -1160,7 +1160,11 @@
     <string name="force_expanded_notifications_summary">Available only for apps that support expanded notifications</string>
 
     <!-- Disabling immersive mode messages -->
-     <string name="disable_immersive_message_title">Disable immersive mode messages</string>
+    <string name="disable_immersive_message_title">Disable immersive mode messages</string>
     <string name="disable_immersive_message_summary">Hide all messages shown in immersive mode</string>
+
+    <!-- Qs music tile -->
+    <string name="qs_music_tile_track_optional_title">Music tile track title</string>
+    <string name="qs_music_tile_track_optional_summary">Show the music track title as the QS tile title</string>
 
 </resources>
