--- a/res/values/nitrogen_strings.xml
+++ b/res/values/nitrogen_strings.xml
@@ -601,6 +601,7 @@
     <string name="clock_date_right">Right of time</string>
     <string name="clock_date_left">Left of time</string>
     <string name="clock_date_position">Date position</string>
+    <string name="status_bar_clock_font_size_title">Font size</string>
 
     <!-- Battery Styles -->
     <string name="battery_style_title">Battery icon style</string>
