--- a/res/xml/clock_date_settings.xml
+++ b/res/xml/clock_date_settings.xml
@@ -36,6 +36,21 @@
             android:title="@string/clock_title_enable"
             android:dependency="status_bar_show_clock" />
 
+    <com.nitrogen.settings.preferences.SystemSettingSeekBarPreference
+        android:key="status_bar_clock_size"
+        android:title="@string/status_bar_clock_font_size_title"
+        android:max="23"
+        settings:min="4"
+        android:defaultValue="14"
+        settings:units="dp"/>
+
+    <com.nitrogen.settings.preferences.SystemSettingListPreference
+        android:key="status_bar_clock_font_style"
+        android:dialogTitle="@string/status_bar_weather_font_style_title"
+        android:title="@string/status_bar_weather_font_style_title"
+        android:entries="@array/status_bar_weather_font_style_entries"
+        android:entryValues="@array/status_bar_weather_font_style_values" />
+
         <ListPreference
             android:key="status_bar_am_pm"
             android:dialogTitle="@string/status_bar_am_pm_title"
