--- a/res/values/nitrogen_arrays.xml
+++ b/res/values/nitrogen_arrays.xml
@@ -852,4 +852,15 @@
         <item>23</item>
         <item>24</item>
     </string-array>
+
+    <!-- Screenshot type -->
+    <string-array name="screenshot_type_entries">
+        <item>@string/screenshot_type_fullscreen</item>
+        <item>@string/screenshot_type_partial</item>
+    </string-array>
+
+    <string-array name="screenshot_type_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
 </resources>
