--- a/res/xml/nitrogen_settings_notifications.xml
+++ b/res/xml/nitrogen_settings_notifications.xml
@@ -84,6 +84,12 @@
         android:title="@string/disable_immersive_message_title"
         android:summary="@string/disable_immersive_message_summary" />
 
+    <com.nitrogen.settings.preferences.SystemSettingSwitchPreference
+        android:key="notification_guts_kill_app_button"
+        android:title="@string/notification_guts_kill_app_button_title"
+        android:summary="@string/notification_guts_kill_app_button_summary"
+        android:defaultValue="false" />
+
     <!--Preference
             android:title="@string/power_notification_title" >
             <intent android:action="android.intent.action.MAIN"
