--- a/res/values/nitrogen_colors.xml
+++ b/res/values/nitrogen_colors.xml
@@ -4,4 +4,6 @@
     <!-- Gesture Anywhere -->
     <color name="ga_gesture_color">@color/material_deep_teal_500</color>
 
+    <color name="floating_action_button_touch_tint">#80ffffff</color>
+
 </resources>
