--- a/res/xml/nitrogen_settings_misc.xml
+++ b/res/xml/nitrogen_settings_misc.xml
@@ -31,7 +31,7 @@
 
         <PreferenceScreen
             android:key="rr_power"
-            android:fragment="com.nitrogen.settings.fragments.PowerPanelSettings" + 
+            android:fragment="com.nitrogen.settings.fragments.PowerPanelSettings"
             android:title="@string/rr_power_panel_title"
             android:summary="@string/rr_power_summary" />
 
